fix home page of third project on upwork alignment on mobile devices

--- a/upwork/third/css/base.css
+++ b/upwork/third/css/base.css
@@ -14,7 +14,7 @@
 	line-height: 80px !important;
 }
 .home-action{
-	width: 250px;
+	margin-top: 10px;
 }
 .welcome-text{
 	margin-top: 200px;
